welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono3:1: error: expected start of definition
override def run() {
         ^PictureMono3:7: error: expected class or object definition
def marqueSol(){
^PictureMono3:12: error: expected class or object definition
def faireV(){
^PictureMono3:27: error: expected class or object definition
def seDeplacerAvantDeFaireLeV(){
^PictureMono3:35: error: expected class or object definition
def faireMotif(){
^PictureMono3:53: error: expected class or object definition
def faireLigne(){
^